# raytracer-challenge

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docker/: Dockerfile  build_container.sh  run_container_current_src.sh
examples/: CMakeLists.txt  chapter06renderexample.cpp  chapter10planerender.cpp  chapter14hexagonworld.cpp  chapter7scene.cpp  patternroomrefractivecylinder.cpp  patternroomrefractivesphere.cpp
examples/include/: hexagon_world_example.h  util.h
src/: CMakeLists.txt  main.cpp
src/canvas/: CMakeLists.txt
src/canvas/include/: canvas.h
src/canvas/src/: canvas.cpp
src/common_types/: CMakeLists.txt
src/common_types/include/: color.h  identitymatrix.h  matrix.h  point.h  ray.h  rotationmatrix.h  scalingmatrix.h  shearingmatrix.h  translationmatrix.h  tuple.h  utility.h  vector.h  viewtransform.h
src/common_types/src/: color.cpp  matrix.cpp  ray.cpp  tuple.cpp  utility.cpp  viewtransform.cpp
src/geometry/: CMakeLists.txt
src/geometry/include/: cone.h  cube.h  cylinder.h  group.h  intersection.h  plane.h  shape.h  sphere.h  triangle.h
src/geometry/src/: cone.cpp  cube.cpp  cylinder.cpp  group.cpp  intersection.cpp  plane.cpp  shape.cpp  sphere.cpp  triangle.cpp
src/lighting/: CMakeLists.txt
src/lighting/include/: lighting.h  material.h  pointlight.h
src/lighting/src/: lighting.cpp  material.cpp  pointlight.cpp
src/pattern/: CMakeLists.txt
src/pattern/include/: checkerpattern.h  gradientpattern.h  pattern.h  ringpattern.h  stripepattern.h
src/pattern/src/: checkerpattern.cpp  gradientpattern.cpp  pattern.cpp  ringpattern.cpp  stripepattern.cpp
src/scene/: CMakeLists.txt
src/scene/include/: camera.h  world.h
src/scene/src/: camera.cpp  world.cpp
test/: CMakeLists.txt  unit_tests.cpp
test/canvas_test/: CMakeLists.txt  canvas_test.cpp
test/common_types_test/: CMakeLists.txt  color_test.cpp  matrix_test.cpp  point_test.cpp  ray_test.cpp  transformation_test.cpp  tuple_test.cpp  vector_test.cpp
test/geometry_test/: CMakeLists.txt  cone_test.cpp  cube_test.cpp  cylinder_test.cpp  group_test.cpp  intersection_test.cpp  plane_test.cpp  shape_test.cpp  sphere_test.cpp  triangle_test.cpp
test/include/: test_classes.h
test/lighting_test/: CMakeLists.txt  lighting_test.cpp  material_test.cpp
test/pattern_test/: CMakeLists.txt  checkerpattern_test.cpp  gradientpattern_test.cpp  pattern_test.cpp  ringpattern_test.cpp  stripepattern_test.cpp
test/scene_test/: CMakeLists.txt  camera_test.cpp  world_test.cpp
